# deeptempo

./: .gitignore  CONTRIBUTING.md  GPU_JUSTIFICATION.md  LICENSE  PITCH.md  README.md  pyproject.toml
.github/workflows/: tests.yml
deeptempo/: __init__.py
deeptempo/core/: __init__.py  config.py  trainer.py
deeptempo/eval/: __init__.py  benchmark.py  metrics.py
deeptempo/models/: __init__.py  patchtst.py  registry.py  timesfm_adapter.py
deeptempo/utils/: __init__.py  gpu_helpers.py  logging.py
docker/: Dockerfile  docker-compose.yml
docs/: roadmap.md
examples/: 02_finetune_ettm1.py
tests/: conftest.py  test_data.py
